# projectiveDynamics

./: .gitignore  CMakeLists.txt  README.md
output/: cloth.mov
src/: CMakeCache.txt  Makefile  cmake_install.cmake  constraint.cpp  constraint.h  main.cpp  mesh.cpp  mesh.h  mesh_utils.h  quadrics.cpp  shader_utils.cpp  shader_utils.h  simulation.h
